# depression-detection

./: .gitignore  AGENTS.md  Makefile  README.md  check_gpu.py  combined_tensor.ipynb  combined_tensor_bert.ipynb  combined_tensor_bert_v3.ipynb  combined_tensor_bert_v4.ipynb  combined_tensor_bert_v5.ipynb  combined_tensor_cleaned.ipynb  combined_tensor_v3.ipynb  combined_tensor_v4.ipynb  combined_tensor_xai.ipynb  compare_predictions.py  datasets.md  download_dataset.py  evaluation_combined_report.md  feature_engineering_backlog.md  fit_preprocessors.py  get_teacher_labels.py  lauda_lassun.ipynb  mlp_pso.ipynb  nrclex_tensor.ipynb  process_data.ipynb  process_data_chi2.py  process_data_nrclex_bert.ipynb  process_new_data.py  pyproject.toml  sentence_transformer_distillation_plan.md  session_summary.md  tf_idf_tensor.ipynb  train.py  train_bert.py  train_distilled.py  train_tfidf.py  validate_models.py
api/: .gitignore  app.py  example_tests.txt  main.py  pyproject.toml  requirements.txt  test_api.py
notebooks/: combined_tensor.ipynb  combined_tensor_bert.ipynb  combined_tensor_bert_v3.ipynb  combined_tensor_bert_v4.ipynb  combined_tensor_bert_v5.ipynb  combined_tensor_cleaned.ipynb  combined_tensor_v3.ipynb  combined_tensor_v4.ipynb  combined_tensor_xai.ipynb  initial.ipynb  mlp_pso.ipynb  nrclex_tensor.ipynb  process_data.ipynb  process_data_nrclex_bert.ipynb  tf_idf_tensor.ipynb
report/: project_report.md
scratch/: analyze_extra_datasets.py  combine_datasets.py  compare_teachers_combined.py  evaluate_combined_students.py  evaluate_new_dataset.py  inspect_shap.py  (+9 more)
(+51 files in other folders)
