[project]
name = "depression"
version = "0.1.0"
description = "Depression detection from Reddit posts using ML"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emoji>=2.15.0",
    "imblearn>=0.0",
    "jupyter>=1.1.1",
    "jupyter-server>=2.17.0",
    "keras-tuner>=1.4.7",
    "matplotlib>=3.9.4",
    "nltk>=3.9.2",
    "nrclex>=3.0.0",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "pyswarm>=0.6",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tensorflow==2.16.1",
    "tensorflow-metal==1.2.0",
]

[project.optional-dependencies]
advanced = [
    "wordsegment>=1.3.1",  # For improved hashtag segmentation
]
