[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emoji>=2.10.0",
    "fastapi>=0.110.0",
    "nrclex==3.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pydantic>=2.6.0",
    "scikit-learn>=1.4.0",
    "tensorflow>=2.16.1",
    "uvicorn>=0.28.0",
]
